# azure-storage

./: Cargo.toml  README.md
src/: main.rs
