cargo-features = ["strip"]

[package]
name = "azure-storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
azure_core = { git = "https://github.com/Advaly/azure-sdk-for-rust", version = "0.1.0" }
azure_storage = { git = "https://github.com/Advaly/azure-sdk-for-rust", version = "0.1.0", default-features = false, features = ["blob"] }
tokio = { version = "1.8.1", features = ["full"] }
env_logger = "0.9.0"
md5 = "0.7.0"
clap = "2.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 'z'
lto = true
strip = true